--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.16",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
