--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.16",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3",
     "reflect-metadata": "^0.2.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
     "typescript": "^5.3.3"
